commit teste 2 CSS

--- a/miniteste/destino.html
+++ b/miniteste/destino.html
@@ -6,20 +6,23 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Destino</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
-<header>
+<header class="cabecalho">
     <h1>Destino de Viagens</h1>
     <body>
         <nav>
-            <a href="index.html">Pagina Inicial</a> |
-            <a href="destino.html">Destinos</a> |
-            <a href="dicasdev.html">Dicas de Viagens</a> |
-            <a href="gastronomia.html">Gastronomia</a> |
-            <a href= "contato.html">Contato</a>
+            <ul>
+            <li><a href="index.html">Pagina Inicial</a> |</li>
+            <li><a href="destino.html">Destinos</a> |</li>
+            <li><a href="dicasdev.html">Dicas de Viagens</a> |</li>
+            <li><a href="gastronomia.html">Gastronomia</a> |</li>
+            <li><a href= "contato.html">Contato</a></li>
+            </ul>
         </nav>
         <section>
-            <h2>Destino 1</h2>
-            <p>aqui você encontrará informações sobre o Destino 1, Incluindo pontos turísticos, cultura local, gastronomia e muito mais.</p>
+            <h2 class = "destino">Destino 1</h2>
+            <p class="green">aqui você encontrará informações sobre o Destino 1, Incluindo pontos turísticos, cultura local, gastronomia e muito mais.</p>
             <h3>Pontos Turísticos</h3>
             <ul>
             <li>Ponto 1</li>
@@ -33,8 +36,8 @@
             <li>Prato 2</li>
             <li>Prato 3</li>
             </ul>
-            <h2>Destino 2</h2>
-            <p>Descubra tudo sobre o Destino 2, desde de suas belas prais até suas atrações históricas e experiências imperdíveis.</p>
+            <h2 class="destino">Destino 2</h2>
+            <p class="green">Descubra tudo sobre o Destino 2, desde de suas belas prais até suas atrações históricas e experiências imperdíveis.</p>
             
             <h3>Praias</h3>
             <ul>
