--- a/miniteste/dicasdev.html
+++ b/miniteste/dicasdev.html
@@ -6,31 +6,34 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Dicas</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
-<header>
+<header class=" cabecalho">
     <h1>Dicas de Viagens</h1>
     <body>
         <nav>
-            <a href="index.html">Pagina Inicial</a> |
-            <a href="destino.html">Destinos</a> |
-            <a href="dicasdev.html">Dicas de Viagens</a> |
-            <a href="gastronomia.html">Gastronomia</a> |
-            <a href= "contato.html">Contato</a>
+            <ul>
+            <li><a href="index.html">Pagina Inicial</a> |</li>
+            <li><a href="destino.html">Destinos</a> |</li>
+            <li><a href="dicasdev.html">Dicas de Viagens</a> |</li>
+            <li><a href="gastronomia.html">Gastronomia</a> |</li>
+            <li><a href= "contato.html">Contato</a></li>
+            </ul>
         </nav>
         <section>
-            <h2>Dica 1</h2>
+            <h2 class="destino">Dica 1</h2>
             <figure class="dica1">
                 <img src="imagens/imagem1.jpg">
                 <figcaption>Legenda da Imagem 1</figcaption>
                </figure>
-               <p>aqui você encontrará uma dica útil para a sua próxima viagem, como embalar de forma eficiente, economicar dinheiro ou aproveitar ao máximo seu tempo.</p>
-               <h2>Dica 2</h2>
+               <p class="green">aqui você encontrará uma dica útil para a sua próxima viagem, como embalar de forma eficiente, economicar dinheiro ou aproveitar ao máximo seu tempo.</p>
+               <h2 class="destino">Dica 2</h2>
                <figure class="dica1">
                    <img src="imagens/imagem2.jpg">
                    <figcaption>Legenda da Imagem 2</figcaption>
                   </figure>
-                  <p>Descubra uma dica valiosa para tornar sua viagem ainda mais especial e inesquecível</p>
-        </section>
+                  <p class="green">Descubra uma dica valiosa para tornar sua viagem ainda mais especial e inesquecível</p>
+        </section>  
     </body>
     <footer>
         <p>&copy; 2023 Meu Site de Viagens. Todos os Direito Reservados</p>
