--- a/miniteste/gastronomia.html
+++ b/miniteste/gastronomia.html
@@ -6,20 +6,23 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Gastronomia</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
-<header>
+<header class="cabecalho">
     <h1>Melhores Locais para se Comer</h1>
     <body>
         <nav>
-            <a href="index.html">Pagina Inicial</a> |
-            <a href="destino.html">Destinos</a> |
-            <a href="dicasdev.html">Dicas de Viagens</a> |
-            <a href="gastronomia.html">Gastronomia</a> |
-            <a href= "contato.html">Contato</a>
+            <ul>
+            <li><a href="index.html">Pagina Inicial</a> |</li>
+            <li><a href="destino.html">Destinos</a> |</li>
+            <li><a href="dicasdev.html">Dicas de Viagens</a> |</li>
+            <li><a href="gastronomia.html">Gastronomia</a> |</li>
+            <li><a href= "contato.html">Contato</a></li>
+            </ul>
         </nav>
         <section>
             <h2>Destino 1</h2>
-            <p>Raking dos Melhores Locais para se comer</p>
+            <p class="vp">Raking dos Melhores Locais para se comer</p>
             <table border = "1">
              <thead>
                 <th rowspan="2">Posição</th>
@@ -45,7 +48,7 @@
         </section>
         <section>
             <h2>Destino 2</h2>
-            <p>Raking dos Melhores Locais para se comer</p>
+            <p class="vp">Raking dos Melhores Locais para se comer</p>
             <table border="1">
                 <thead>
                     <thead>
