--- a/miniteste/contato.html
+++ b/miniteste/contato.html
@@ -6,18 +6,21 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Gastronomia</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
-<header>
+<header class = "cabecalho">
     <h1>Entre em Contato</h1>
-    <body>
+    <body class="background">
         <nav>
-            <a href="index.html">Pagina Inicial</a> |
-            <a href="destino.html">Destinos</a> |
-            <a href="dicasdev.html">Dicas de Viagens</a> |
-            <a href="gastronomia.html">Gastronomia</a> |
-            <a href= "contato.html">Contato</a>
+            <ul>
+            <li><a href="index.html">Pagina Inicial</a> |</li>
+            <li><a href="destino.html">Destinos</a> |</li>
+            <li><a href="dicasdev.html">Dicas de Viagens</a> |</li>
+            <li><a href="gastronomia.html">Gastronomia</a> |</li>
+            <li><a href= "contato.html">Contato</a></li>
+            </ul>
         </nav>
-        <section>
+        <section class="background">
             <h2>informações do Contato:</h2>
             <ul>
         <li><strong>E-mail: </strong><a href="mailto:contato@meussiteviagens.com">contato@meussiteviagens.com</a></li>
