--- a/miniteste/index.html
+++ b/miniteste/index.html
@@ -6,20 +6,23 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>index</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
-<header>
+<header class = "cabecalho">
     <h1>Bem vindo ao Meu site de Viagens</h1>
     <body>
         <nav>
-            <a href="index.html">Pagina Inicial</a> |
-            <a href="destino.html">Destinos</a> |
-            <a href="dicasdev.html">Dicas de Viagens</a> |
-            <a href="gastronomia.html">Gastronomia</a> |
-            <a href= "contato.html">Contato</a>
+            <ul>
+            <li><a href="index.html">Pagina Inicial</a> |</li>
+            <li><a href="destino.html">Destinos</a> |</li>
+            <li><a href="dicasdev.html">Dicas de Viagens</a> |</li>
+            <li><a href="gastronomia.html">Gastronomia</a> |</li>
+            <li><a href= "contato.html">Contato</a></li>
+            </ul>
         </nav>
         <section>
-        <h2>Descubra novos Destinos </h2>
-        <p>Explore os Lugares mais incríveis ao redor do mundo</p>
+        <h2 class="yellow">Descubra novos Destinos </h2>
+        <p class="red">Explore os Lugares mais incríveis ao redor do mundo</p>
         <img src="imagens/imagem3.jpg">
     </section>
     </body>
